fix z-index

--- a/frontend/src/metabase/embedding-sdk/components/IframeInteractiveEmbeddingProvider.module.css
+++ b/frontend/src/metabase/embedding-sdk/components/IframeInteractiveEmbeddingProvider.module.css
@@ -1,3 +1,4 @@
 .InteractivePortalContainer {
   position: fixed;
+  z-index: var(--mb-overlay-z-index);
 }
